# sorbet-rs

./: .gitignore  Cargo.toml  README.md
sorbet/: Cargo.toml
sorbet-color/: Cargo.toml  README.md
sorbet-color/examples/: u32_encoding.ipynb
sorbet-color/src/: css.rs  lib.rs  named.rs
sorbet-color/src/types/: hsl.rs  hsla.rs  hsv.rs  hsva.rs  mod.rs  rgb.rs  rgba.rs
sorbet-widgets/: Cargo.toml
sorbet-widgets/src/: lib.rs
sorbet/examples/learn_wgpu/: main.rs  shader.wgsl
sorbet/src/: fonts.rs  lib.rs
sorbet/src/fonts/: linux.rs  macos.rs  mod.rs
src/: lib.rs  named.rs  types.rs
src/types/: hsl.rs  hsla.rs  hsv.rs  hsva.rs  mod.rs  rgb.rs  rgba.rs
