[package]
name = "sorbet"
version = "0.0.0"
authors = ["Jacob Birkett <jacob@birkett.dev>"]
edition = "2021"
description = "A delicious GUI library for the Rust language."
# documentation = "https://birkett.dev/docs/sorbet-rs"
# homepage = "https://birkett.dev/projects/sorbet-rs"
repository = "https://github.com/spikespaz/sorbet-rs"
license = "Apache-2.0"
keywords = ["ui", "gui", "graphics", "widgets", "interface"]
categories = ["graphics", "gui", "rendering", "localization"]
publish = false

[dependencies]
