[package]
name = "sorbet-color"
version = "0.3.0"
authors = ["Jacob Birkett <jacob@birkett.dev>"]
edition = "2021"
description = "A Rust library for working with (and converting) colors in different spaces."
homepage = "https://github.com/spikespaz/sorbet-rs/tree/master/sorbet-color"
repository = "https://github.com/spikespaz/sorbet-rs"
license = "Apache-2.0"
keywords = ["graphics", "color", "conversion", "rgb", "hsl"]
categories = ["graphics"]
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
strum = { version = "0.24", features = ["derive"] }
wgpu = { version = "0.12", optional = true }

[dev-dependencies]
once_cell = "1.9"
test-case = "2"
