[package]
name = "sorbet"
version = "0.0.0"
authors = ["Jacob Birkett <jacob@birkett.dev>"]
edition = "2021"
description = "A delicious GUI library for the Rust language."
# documentation = "https://birkett.dev/docs/sorbet-rs"
# homepage = "https://birkett.dev/projects/sorbet-rs"
repository = "https://github.com/spikespaz/sorbet-rs"
license = "Apache-2.0"
keywords = ["ui", "gui", "graphics", "widgets", "interface"]
categories = ["graphics", "gui", "rendering", "localization"]
publish = false

[dependencies]
# for cross-platform windowing
winit = { version = "^0.25.0", optional = true }
# for cross-platform graphics api
wgpu = "^0.11.0"
# for font rasterization and layout
font-kit = { version = "^0.10.1", optional = true }
fontdue = { version = "^0.6.2", optional = true }
# for font shaping
harfbuzz_rs = { version = "^2.0.1", optional = true }
# for GUI templating and config files
ron = "^0.7.0"

[dev-dependencies]
# requirements by wgpu crate
image = "^0.23.14"
cgmath = "^0.18.0"
env_logger = "^0.9.0"
log = "^0.4.14"
pollster = "^0.2.4"

[features]
default = ["winit", "font-kit"]
