[package]
name = "sorbet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
# winit = "0.26"
# wgpu = "0.12"
lyon = "0.17"
sorbet-color = { path = "../sorbet-color", features = ["wgpu"] }

[target.'cfg(target_os = "linux")'.dependencies]
fontconfig = "0.3"

[dev-dependencies]
test-case = "2"
