[package]
name = "sorbet"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true

[dependencies]
thiserror = "1"
wgpu = "0.12"
lyon = "0.17"
winit = "0.26"
sorbet-color = { path = "../sorbet-color", features = ["wgpu"] }

[target.'cfg(target_os = "linux")'.dependencies]
fontconfig = "0.3"

[dev-dependencies]
test-case = "2"
smol = "1.2"
bytemuck = { version = "1.8", features = ["derive"] }
env_logger = "0.9"
